Updated README.md with new content.